--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,18 @@ jobs:
       # Generate repositories
       
 
-
+     # Generate basic profile
+     - name: Generate basic profile
+       uses: lowlighter/metrics@latest
+       with:
+         filename: basicprofile.plugin.classic.svg
+         token: ${{ secrets.METRICS_TOKEN }}
+         template: classic
+         base: header, activity, community, repositories, metadata
+         config_timezone: America/Bogota
+         plugin_introduction: yes
+         plugin_introduction_title: yes
+         plugin_stargazers: yes
+         
 
    
