--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,5 +35,17 @@ jobs:
          plugin_introduction_title: yes
          plugin_stargazers: yes
          
-
+      # Generate repositories
+     - name: Pinned repositories 
+					 	uses: lowlighter/metrics@latest
+								with:
+    	  	 filename: plugin.repositories.pinned.svg
+									token: ${{ secrets.METRICS_TOKEN }}
+									base: ""
+									plugin_repositories: yes
+									plugin_repositories: yes
+     	   plugin_repositories_featured:  sistema-gestion-inventarios,  hoja_de_vida 
+     	   plugin_repositories_order: featured, pinned, starred, random
+     	   plugin_repositories_pinned: 6
+     	   plugin_repositories_affiliations: owner, collaborator, organization_member      
    
